--- a/app/src/main/res/layout/item_model.xml
+++ b/app/src/main/res/layout/item_model.xml
@@ -28,14 +28,14 @@
                 android:layout_width="48dp"
                 android:layout_height="48dp"
                 android:scaleType="fitXY"
-                android:tint="?attr/colorBackgroundFloating" />
+                android:tint="@android:color/white" />
 
             <TextView
                 android:id="@+id/tv_name"
                 android:textStyle="bold"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textColor="?attr/colorBackgroundFloating"
+                android:textColor="@android:color/white"
                 android:textSize="16sp" />
 
         </LinearLayout>
