--- a/app/src/main/res/menu/navigation.xml
+++ b/app/src/main/res/menu/navigation.xml
@@ -13,7 +13,7 @@
 
     <item
         android:id="@+id/navigation_mine"
-        android:icon="@mipmap/ic_face_black_24dp"
-        android:title="个人" />
+        android:icon="@mipmap/ic_settings_black_24dp"
+        android:title="设置" />
 
 </menu>
