--- a/app/src/main/res/layout/item_doc.xml
+++ b/app/src/main/res/layout/item_doc.xml
@@ -40,7 +40,7 @@
                     android:layout_height="wrap_content"
                     android:maxEms="9"
                     android:singleLine="true"
-                    android:textColor="@color/black_dark"
+                    android:textColor="?android:attr/textColorPrimary"
                     android:textSize="17sp" />
 
                 <TextView
