--- a/app/src/main/res/layout/item_contact.xml
+++ b/app/src/main/res/layout/item_contact.xml
@@ -75,6 +75,7 @@
                         android:layout_width="14dp"
                         android:layout_height="14dp"
                         android:layout_marginRight="4dp"
+                        android:tint="?android:attr/textColorPrimary"
                         android:visibility="gone" />
 
                     <TextView
