--- a/app/src/main/res/layout/item_tiny.xml
+++ b/app/src/main/res/layout/item_tiny.xml
@@ -21,7 +21,7 @@
 
             <TextView
                 android:id="@+id/tv_string"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textSize="14sp" />
 
