--- a/app/src/main/res/layout/activity_morse.xml
+++ b/app/src/main/res/layout/activity_morse.xml
@@ -31,7 +31,7 @@
                     android:layout_height="wrap_content"
                     android:orientation="vertical">
 
-                    <EditText
+                    <me.lancer.pocket.ui.view.ClearEditText
                         android:id="@+id/et_char"
                         android:layout_width="match_parent"
                         android:layout_height="120dp"
@@ -57,7 +57,7 @@
                     android:layout_height="wrap_content"
                     android:orientation="vertical">
 
-                    <EditText
+                    <me.lancer.pocket.ui.view.ClearEditText
                         android:id="@+id/et_code"
                         android:layout_width="match_parent"
                         android:layout_height="120dp"
