--- a/app/src/main/res/layout/activity_photo.xml
+++ b/app/src/main/res/layout/activity_photo.xml
@@ -27,9 +27,18 @@
         android:layout_height="48dp"
         android:layout_gravity="bottom"
         android:layout_marginBottom="48dp"
-        android:paddingRight="8dp"
         android:background="@color/black_dark"
-        android:gravity="center_vertical|right">
+        android:gravity="center_vertical|right"
+        android:paddingRight="8dp">
+
+        <Button
+            android:id="@+id/btn_setting"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:layout_margin="8dp"
+            android:background="@mipmap/ic_settings_black_24dp"
+            android:backgroundTint="@color/white"
+            android:visibility="gone" />
 
         <Button
             android:id="@+id/btn_share"
