--- a/app/src/main/res/layout/activity_image.xml
+++ b/app/src/main/res/layout/activity_image.xml
@@ -5,12 +5,14 @@
 
     <LinearLayout
         android:id="@+id/ll_titile"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:gravity="center_vertical"
         android:background="?attr/colorPrimary"
         android:clipToPadding="true"
         android:elevation="3dp"
-        android:fitsSystemWindows="true">
+        android:fitsSystemWindows="true"
+        android:orientation="horizontal">
 
         <ImageView
             android:id="@+id/iv_back"
