--- a/app/src/main/res/layout/activity_large.xml
+++ b/app/src/main/res/layout/activity_large.xml
@@ -36,7 +36,7 @@
             </LinearLayout>
 
             <android.support.v7.widget.Toolbar
-                android:id="@+id/t_large"
+                android:id="@+id/toolbar"
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
                 app:layout_collapseMode="pin" />
