--- a/app/src/main/res/layout/activity_app.xml
+++ b/app/src/main/res/layout/activity_app.xml
@@ -32,7 +32,7 @@
             android:layout_width="wrap_content"
             android:layout_height="48dp"
             android:gravity="center"
-            android:textColor="?attr/colorBackgroundFloating"
+            android:textColor="@android:color/white"
             android:textSize="18sp" />
 
         <TextView
@@ -42,6 +42,7 @@
 
         <ImageView
             android:id="@+id/iv_search"
+            android:visibility="invisible"
             android:layout_width="48dp"
             android:layout_height="48dp"
             android:padding="12dp"
