--- a/app/src/main/res/layout/activity_file.xml
+++ b/app/src/main/res/layout/activity_file.xml
@@ -32,7 +32,7 @@
             android:layout_width="wrap_content"
             android:layout_height="48dp"
             android:gravity="center"
-            android:textColor="?attr/colorBackgroundFloating"
+            android:textColor="@android:color/white"
             android:textSize="18sp" />
 
         <TextView
@@ -66,7 +66,7 @@
             android:layout_height="wrap_content"
             android:ellipsize="start"
             android:singleLine="true"
-            android:textColor="?attr/colorBackgroundFloating"
+            android:textColor="@android:color/white"
             android:textSize="16sp" />
 
     </LinearLayout>
