--- a/app/src/main/res/layout/activity_video.xml
+++ b/app/src/main/res/layout/activity_video.xml
@@ -28,8 +28,22 @@
             android:layout_marginLeft="-24dp"
             android:gravity="center"
             android:text="@string/video_zn"
-            android:textColor="?attr/colorBackgroundFloating"
+            android:textColor="@android:color/white"
             android:textSize="18sp" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1" />
+
+        <ImageView
+            android:id="@+id/iv_search"
+            android:visibility="invisible"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:padding="12dp"
+            android:src="@mipmap/ic_search_white_24dp"
+            android:gravity="center_vertical|left" />
 
     </LinearLayout>
 
