Fixed some nullpoint bug.

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -89,6 +89,10 @@
         <item name="android:fontFamily" tools:targetApi="jelly_bean">sans-serif-light</item>
     </style>
 
+    <style name="CalendarView">
+        <item name="android:background">@drawable/schedule_background</item>
+    </style>
+
     <style name="ProgressBar.Horizontal" parent="@android:style/Widget.Holo.ProgressBar.Horizontal" tools:targetApi="honeycomb"></style>
 
 </resources>
