--- a/app/src/main/res/layout/activity_morse.xml
+++ b/app/src/main/res/layout/activity_morse.xml
@@ -77,7 +77,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_margin="@dimen/fab_margin"
+            android:layout_marginBottom="@dimen/fab_margin"
             android:elevation="4dp"
             android:src="@mipmap/ic_swap_vert_white_24dp"
             app:backgroundTint="?attr/colorPrimary" />
