--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -41,4 +41,32 @@
     <color name="reply_button_text_disable">#b8b8b8</color>
     <color name="guide_bg">#263238</color>
 
+    <color name="common_bg">@color/white</color>
+    <color name="common_touch_bg">#E3E3E3</color>
+    <color name="common_gray_bg">#EEEEEE</color>
+    <color name="common_h1">#212121</color>
+    <color name="common_h2">#727272</color>
+    <color name="common_h3">#B2B2B2</color>
+    <color name="common_divider_narrow">#E3E3E3</color>
+    <color name="common_divider_wide">@color/white</color>
+
+    <color name="reader_menu_bg_color">#191919</color>
+    <color name="read_theme_white">#ffffff</color>
+    <color name="read_theme_green">#bed0cf</color>
+    <color name="read_theme_yellow">#e6dbbf</color>
+    <color name="read_theme_gray">#AAAAAA</color>
+    <color name="read_theme_night">#000000</color>
+
+    <color name="chapter_title_night">#292929</color>
+    <color name="chapter_content_night">#444444</color>
+    <color name="chapter_title_day">#837B63</color>
+    <color name="chapter_content_day">#3B3220</color>
+    <color name="book_read_top_text">#D1D1D1</color>
+    <color name="book_read_bottom_text">#e6e6e6</color>
+
+    <color name="gender_select_male_normal">#B0E2FF</color>
+    <color name="gender_select_male_pressed">#B2DFEE</color>
+    <color name="gender_select_female_normal">#EEA9B8</color>
+    <color name="gender_select_female_pressed">#EEA2AD</color>
+
 </resources>
