--- a/app/src/main/res/layout/activity_morse.xml
+++ b/app/src/main/res/layout/activity_morse.xml
@@ -10,98 +10,114 @@
 
     <include layout="@layout/toolbar" />
 
-    <FrameLayout
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:orientation="vertical">
 
-            <android.support.v7.widget.CardView
+            <FrameLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="8dp"
-                android:orientation="vertical"
-                app:cardCornerRadius="0dp">
+                android:layout_height="wrap_content">
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="vertical">
 
-                    <me.lancer.pocket.ui.view.ClearEditText
-                        android:id="@+id/et_char"
+                    <android.support.v7.widget.CardView
                         android:layout_width="match_parent"
-                        android:layout_height="120dp"
-                        android:background="@null"
-                        android:gravity="top"
-                        android:hint="字符串在这里(长按粘贴, 双击复制)"
-                        android:padding="8dp" />
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="8dp"
+                        android:orientation="vertical"
+                        app:cardCornerRadius="0dp">
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:orientation="vertical">
+
+                            <me.lancer.pocket.ui.view.ClearEditText
+                                android:id="@+id/et_char"
+                                android:layout_width="match_parent"
+                                android:layout_height="120dp"
+                                android:background="@null"
+                                android:gravity="top"
+                                android:hint="字符串在这里(长按粘贴, 双击复制)"
+                                android:padding="8dp" />
+
+                        </LinearLayout>
+
+                    </android.support.v7.widget.CardView>
+
+                    <android.support.v7.widget.CardView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="8dp"
+                        android:layout_marginBottom="8dp"
+                        android:orientation="vertical"
+                        app:cardCornerRadius="0dp">
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:orientation="vertical">
+
+                            <me.lancer.pocket.ui.view.ClearEditText
+                                android:id="@+id/et_code"
+                                android:layout_width="match_parent"
+                                android:layout_height="120dp"
+                                android:background="@null"
+                                android:gravity="top"
+                                android:hint="摩斯电码在这里(长按粘贴, 双击复制)"
+                                android:padding="8dp" />
+
+                        </LinearLayout>
+
+                    </android.support.v7.widget.CardView>
 
                 </LinearLayout>
 
-            </android.support.v7.widget.CardView>
+                <android.support.design.widget.FloatingActionButton
+                    android:id="@+id/fab"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginBottom="@dimen/fab_margin"
+                    android:elevation="4dp"
+                    android:src="@mipmap/ic_swap_vert_white_24dp"
+                    app:backgroundTint="?attr/colorPrimary" />
 
-            <android.support.v7.widget.CardView
+            </FrameLayout>
+
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="8dp"
-                android:layout_marginTop="8dp"
-                android:orientation="vertical"
-                app:cardCornerRadius="0dp">
+                android:orientation="vertical">
 
-                <LinearLayout
+                <TextView
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical">
+                    android:layout_height="match_parent"
+                    android:gravity="center"
+                    android:text="摩斯电码表"
+                    android:textColor="?attr/colorPrimary"
+                    android:textSize="18sp" />
 
-                    <me.lancer.pocket.ui.view.ClearEditText
-                        android:id="@+id/et_code"
-                        android:layout_width="match_parent"
-                        android:layout_height="120dp"
-                        android:background="@null"
-                        android:gravity="top"
-                        android:hint="摩斯电码在这里(长按粘贴, 双击复制)"
-                        android:padding="8dp" />
+            </LinearLayout>
 
-                </LinearLayout>
-
-            </android.support.v7.widget.CardView>
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/rv_morse"
+                android:layout_marginLeft="4dp"
+                android:layout_marginRight="4dp"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
 
         </LinearLayout>
 
-        <android.support.design.widget.FloatingActionButton
-            android:id="@+id/fab"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginBottom="@dimen/fab_margin"
-            android:elevation="4dp"
-            android:src="@mipmap/ic_swap_vert_white_24dp"
-            app:backgroundTint="?attr/colorPrimary" />
-
-    </FrameLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="center"
-            android:text="摩斯电码表"
-            android:textColor="?attr/colorPrimary"
-            android:textSize="18sp" />
-
-    </LinearLayout>
-
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/rv_morse"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+    </ScrollView>
 
 </LinearLayout>
