--- a/app/src/main/res/layout/activity_novel_info.xml
+++ b/app/src/main/res/layout/activity_novel_info.xml
@@ -172,6 +172,8 @@
 
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/rv_chapter"
+                android:layout_marginLeft="4dp"
+                android:layout_marginRight="4dp"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"/>
 
