--- a/app/src/main/res/layout/activity_photo.xml
+++ b/app/src/main/res/layout/activity_photo.xml
@@ -7,55 +7,66 @@
     android:background="@color/black_dark"
     tools:context=".info.mvp.photo.activity.PhotoDetailActivity">
 
-    <LinearLayout
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@color/black_dark">
+        android:layout_height="match_parent">
 
-        <ImageView
-            android:id="@+id/iv_img"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_gravity="center"
-            android:scaleType="fitCenter" />
+            android:background="@color/black_dark"
+            android:gravity="center"
+            android:orientation="vertical">
 
-    </LinearLayout>
+            <ImageView
+                android:id="@+id/iv_img"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_gravity="center"
+                android:layout_weight="1"
+                android:adjustViewBounds="true"
+                android:scaleType="fitStart" />
 
-    <LinearLayout
-        android:id="@+id/ll_bar"
-        android:layout_width="match_parent"
-        android:layout_height="48dp"
-        android:layout_gravity="bottom"
-        android:layout_marginBottom="48dp"
-        android:background="@color/black_dark"
-        android:gravity="center_vertical|right"
-        android:paddingRight="8dp">
+            <LinearLayout
+                android:id="@+id/ll_bar"
+                android:layout_width="match_parent"
+                android:layout_height="48dp"
+                android:layout_gravity="bottom"
+                android:layout_weight="1"
+                android:background="@color/black_dark"
+                android:gravity="center_vertical|right"
+                android:paddingRight="8dp">
 
-        <Button
-            android:id="@+id/btn_setting"
-            android:layout_width="24dp"
-            android:layout_height="24dp"
-            android:layout_margin="8dp"
-            android:background="@mipmap/ic_settings_black_24dp"
-            android:backgroundTint="@color/white"
-            android:visibility="gone" />
+                <Button
+                    android:id="@+id/btn_setting"
+                    android:layout_width="24dp"
+                    android:layout_height="24dp"
+                    android:layout_margin="8dp"
+                    android:background="@mipmap/ic_settings_black_24dp"
+                    android:backgroundTint="@color/white"
+                    android:visibility="gone" />
 
-        <Button
-            android:id="@+id/btn_share"
-            android:layout_width="24dp"
-            android:layout_height="24dp"
-            android:layout_margin="8dp"
-            android:background="@mipmap/ic_share_black_24dp"
-            android:backgroundTint="@color/white" />
+                <Button
+                    android:id="@+id/btn_share"
+                    android:layout_width="24dp"
+                    android:layout_height="24dp"
+                    android:layout_margin="8dp"
+                    android:background="@mipmap/ic_share_black_24dp"
+                    android:backgroundTint="@color/white" />
 
-        <Button
-            android:id="@+id/btn_download"
-            android:layout_width="24dp"
-            android:layout_height="24dp"
-            android:layout_margin="8dp"
-            android:background="@mipmap/ic_get_app_black_24dp"
-            android:backgroundTint="@color/white" />
+                <Button
+                    android:id="@+id/btn_download"
+                    android:layout_width="24dp"
+                    android:layout_height="24dp"
+                    android:layout_margin="8dp"
+                    android:background="@mipmap/ic_get_app_black_24dp"
+                    android:backgroundTint="@color/white" />
 
-    </LinearLayout>
+            </LinearLayout>
+
+        </LinearLayout>
+
+    </ScrollView>
 
 </FrameLayout>
