--- a/app/src/main/res/layout/activity_novel_read.xml
+++ b/app/src/main/res/layout/activity_novel_read.xml
@@ -31,8 +31,8 @@
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
 
-                <Button
-                    android:id="@+id/btn_prev"
+                <TextView
+                    android:id="@+id/tv_prev"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="8dp"
@@ -40,13 +40,13 @@
                     android:layout_marginRight="4dp"
                     android:layout_marginTop="8dp"
                     android:layout_weight="1"
-                    android:background="?attr/colorPrimary"
+                    android:gravity="center"
                     android:text="上一章"
-                    android:textColor="@color/white"
+                    android:textColor="?attr/colorPrimary"
                     android:textSize="20sp" />
 
-                <Button
-                    android:id="@+id/btn_next"
+                <TextView
+                    android:id="@+id/tv_next"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="8dp"
@@ -54,9 +54,9 @@
                     android:layout_marginRight="8dp"
                     android:layout_marginTop="8dp"
                     android:layout_weight="1"
-                    android:background="?attr/colorPrimary"
+                    android:gravity="center"
                     android:text="下一章"
-                    android:textColor="@color/white"
+                    android:textColor="?attr/colorPrimary"
                     android:textSize="20sp" />
 
             </LinearLayout>
