--- a/app/src/main/res/layout/item_repository.xml
+++ b/app/src/main/res/layout/item_repository.xml
@@ -28,8 +28,8 @@
                 android:id="@+id/iv_img"
                 android:layout_width="80dp"
                 android:layout_height="80dp"
+                android:padding="10dp"
                 android:layout_gravity="center"
-                android:layout_marginRight="4dp"
                 android:transitionName="transImg"
                 android:scaleType="centerCrop" />
 
