--- a/app/src/main/res/layout/item_string.xml
+++ b/app/src/main/res/layout/item_string.xml
@@ -23,6 +23,7 @@
                 android:id="@+id/tv_string"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:textColor="?android:attr/textColorPrimary"
                 android:textSize="14sp" />
 
         </LinearLayout>
