--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,11 +6,14 @@
     <color name="primary">#2196F3</color>
     <color name="primary_dark">#1976D2</color>
     <color name="accent">@color/primary</color>
+    <color name="md_deep_orange_500">@color/black_dark</color>
+    <color name="md_deep_orange_700">@color/black_dark</color>
 
     <color name="black">#000000</color>
     <color name="white">#FFFFFF</color>
 
     <color name="grey_light">#E6E6E6</color>
+    <color name="black_float">#424242</color>
     <color name="black_light">#303030</color>
     <color name="black_dark">#212121</color>
     <color name="red">#F34336</color>>
