--- a/app/src/main/res/menu/menu_novel.xml
+++ b/app/src/main/res/menu/menu_novel.xml
@@ -13,7 +13,7 @@
 
     <item
         android:id="@+id/menu_theme"
-        android:title="主题换色"
+        android:title="夜间模式"
         app:showAsAction="never" />
 
     <item
