--- a/app/src/main/res/layout/activity_photo.xml
+++ b/app/src/main/res/layout/activity_photo.xml
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/fl_photo"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/black_dark"
-    tools:context=".info.mvp.photo.activity.PhotoDetailActivity">
+    android:orientation="vertical">
 
     <ScrollView
         android:layout_width="match_parent"
@@ -15,25 +13,21 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_gravity="center"
-            android:background="@color/black_dark"
-            android:gravity="center"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:background="@color/black_dark">
 
             <ImageView
                 android:id="@+id/iv_img"
+                android:paddingTop="48dp"
                 android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_gravity="center"
-                android:layout_weight="1"
+                android:layout_height="wrap_content"
                 android:adjustViewBounds="true"
-                android:scaleType="fitStart" />
+                android:scaleType="fitCenter" />
 
             <LinearLayout
                 android:id="@+id/ll_bar"
                 android:layout_width="match_parent"
                 android:layout_height="48dp"
-                android:layout_gravity="bottom"
-                android:layout_weight="1"
                 android:background="@color/black_dark"
                 android:gravity="center_vertical|right"
                 android:paddingRight="8dp">
