Add to-do model.

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -16,5 +16,7 @@
     <dimen name="display2">45sp</dimen>
     <dimen name="display3">56sp</dimen>
     <dimen name="display4">112sp</dimen>
+
+    <dimen name="list_item_padding">8dp</dimen>
 </resources>
 
